modifey for data

--- a/make dateset.ipynb
+++ b/make dateset.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,26 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('Data/accident_13937.csv')"
+    "df = pd.read_csv('Dataset/natural_ds.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "   Unnamed: 0  Unnamed: 0.1      screen_name  \\\n0           0             0   naomi_cortez11   \n1           1             1         DaavPuke   \n2           2             2  doctorneutroph1   \n3           3             3  JonSmit84868940   \n4           4             4  KansasCityScout   \n\n                              username              user_id  \\\n0                            ❅Nⱥ๏mᎥ❅ ✨            867458209   \n1  Daav 'Riots Are Good Actually' Puke            187295425   \n2             doctorneutrophilsarelife  1284998127607599105   \n3                            Jon Smith  1238503858684465152   \n4                    Kansas City Scout             25517791   \n\n              tweet_id                                    tweet_url  \\\n0  1287538180044988416   /naomi_cortez11/status/1287538180044988416   \n1  1287538165859983365         /DaavPuke/status/1287538165859983365   \n2  1287538159765651457  /doctorneutroph1/status/1287538159765651457   \n3  1287538120427294720  /JonSmit84868940/status/1287538120427294720   \n4  1287538116958584833  /KansasCityScout/status/1287538116958584833   \n\n             timestamp  timestamp_epochs  \\\n0  2020-07-26 23:59:58        1595807998   \n1  2020-07-26 23:59:54        1595807994   \n2  2020-07-26 23:59:53        1595807993   \n3  2020-07-26 23:59:43        1595807983   \n4  2020-07-26 23:59:43        1595807983   \n\n                                                text  ... has_media img_urls  \\\n0  I need to redye my roots but how am I suppose ...  ...     False       []   \n1  Any accident that brings you to Twitter is an ...  ...     False       []   \n2  legit I used their first name by accident on a...  ...     False       []   \n3     Republicans didn't make laws dumb by accident.  ...     False       []   \n4  Updt 2: ACCIDENT\\nI-435 WB (KS) PAST STATE LIN...  ...     False       []   \n\n  video_url  likes retweets  replies  is_replied  is_reply_to  \\\n0       NaN      0        0        0       False        False   \n1       NaN      1        0        0       False         True   \n2       NaN      1        0        0       False         True   \n3       NaN      0        0        0       False         True   \n4       NaN      0        0        0       False        False   \n\n   parent_tweet_id                                     reply_to_users  \n0              NaN                                                 []  \n1     1.287538e+18  [{'screen_name': 'chersith', 'user_id': '97954...  \n2     1.287493e+18  [{'screen_name': 'gemini_mdtobe', 'user_id': '...  \n3     1.287468e+18  [{'screen_name': 'shannonrwatts', 'user_id': '...  \n4              NaN                                                 []  \n\n[5 rows x 23 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>Unnamed: 0.1</th>\n      <th>screen_name</th>\n      <th>username</th>\n      <th>user_id</th>\n      <th>tweet_id</th>\n      <th>tweet_url</th>\n      <th>timestamp</th>\n      <th>timestamp_epochs</th>\n      <th>text</th>\n      <th>...</th>\n      <th>has_media</th>\n      <th>img_urls</th>\n      <th>video_url</th>\n      <th>likes</th>\n      <th>retweets</th>\n      <th>replies</th>\n      <th>is_replied</th>\n      <th>is_reply_to</th>\n      <th>parent_tweet_id</th>\n      <th>reply_to_users</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>0</td>\n      <td>naomi_cortez11</td>\n      <td>❅Nⱥ๏mᎥ❅ ✨</td>\n      <td>867458209</td>\n      <td>1287538180044988416</td>\n      <td>/naomi_cortez11/status/1287538180044988416</td>\n      <td>2020-07-26 23:59:58</td>\n      <td>1595807998</td>\n      <td>I need to redye my roots but how am I suppose ...</td>\n      <td>...</td>\n      <td>False</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>1</td>\n      <td>DaavPuke</td>\n      <td>Daav 'Riots Are Good Actually' Puke</td>\n      <td>187295425</td>\n      <td>1287538165859983365</td>\n      <td>/DaavPuke/status/1287538165859983365</td>\n      <td>2020-07-26 23:59:54</td>\n      <td>1595807994</td>\n      <td>Any accident that brings you to Twitter is an ...</td>\n      <td>...</td>\n      <td>False</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>False</td>\n      <td>True</td>\n      <td>1.287538e+18</td>\n      <td>[{'screen_name': 'chersith', 'user_id': '97954...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>2</td>\n      <td>doctorneutroph1</td>\n      <td>doctorneutrophilsarelife</td>\n      <td>1284998127607599105</td>\n      <td>1287538159765651457</td>\n      <td>/doctorneutroph1/status/1287538159765651457</td>\n      <td>2020-07-26 23:59:53</td>\n      <td>1595807993</td>\n      <td>legit I used their first name by accident on a...</td>\n      <td>...</td>\n      <td>False</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>False</td>\n      <td>True</td>\n      <td>1.287493e+18</td>\n      <td>[{'screen_name': 'gemini_mdtobe', 'user_id': '...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>3</td>\n      <td>JonSmit84868940</td>\n      <td>Jon Smith</td>\n      <td>1238503858684465152</td>\n      <td>1287538120427294720</td>\n      <td>/JonSmit84868940/status/1287538120427294720</td>\n      <td>2020-07-26 23:59:43</td>\n      <td>1595807983</td>\n      <td>Republicans didn't make laws dumb by accident.</td>\n      <td>...</td>\n      <td>False</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>False</td>\n      <td>True</td>\n      <td>1.287468e+18</td>\n      <td>[{'screen_name': 'shannonrwatts', 'user_id': '...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>4</td>\n      <td>KansasCityScout</td>\n      <td>Kansas City Scout</td>\n      <td>25517791</td>\n      <td>1287538116958584833</td>\n      <td>/KansasCityScout/status/1287538116958584833</td>\n      <td>2020-07-26 23:59:43</td>\n      <td>1595807983</td>\n      <td>Updt 2: ACCIDENT\\nI-435 WB (KS) PAST STATE LIN...</td>\n      <td>...</td>\n      <td>False</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>[]</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 23 columns</p>\n</div>"
+      "text/plain": "   Unnamed: 0    screen_name                          username  \\\n0           0  shubhamsteve7                Shubham Yaduvanshi   \n1           1   texaslnghorn                      johnny quest   \n2           2   CarolsCloset                   carolyn tackett   \n3           3        MICLAW1  Maddox, Isaacson & Cisneros, LLP   \n4           4     RuizBelvis                Miguel Ruiz Belvis   \n\n               user_id             tweet_id  \\\n0  1152844946577039362  1279203043465138176   \n1           1725786169  1279202307360645121   \n2             22285976  1279201745793622017   \n3            863842520  1279201306234761217   \n4            253829400  1279200736706990080   \n\n                                   tweet_url            timestamp  \\\n0  /shubhamsteve7/status/1279203043465138176  2020-07-03 23:59:06   \n1   /texaslnghorn/status/1279202307360645121  2020-07-03 23:56:11   \n2   /CarolsCloset/status/1279201745793622017  2020-07-03 23:53:57   \n3        /MICLAW1/status/1279201306234761217  2020-07-03 23:52:12   \n4     /RuizBelvis/status/1279200736706990080  2020-07-03 23:49:56   \n\n   timestamp_epochs                                               text  \\\n0        1593820746  INFORM report (European Commission) has ranked...   \n1        1593820571  Fuck Minnesota. You made your bed, sleep in it...   \n2        1593820437  Not happening. This isn't a natural disaster. ...   \n3        1593820332  Having a strong continuity plan in place means...   \n4        1593820196  @DavidBegnaud @AEEONLINE @NoticentroWAPA @Tele...   \n\n                                           text_html  ...  \\\n0  <p class=\"TweetTextSize js-tweet-text tweet-te...  ...   \n1  <p class=\"TweetTextSize js-tweet-text tweet-te...  ...   \n2  <p class=\"TweetTextSize js-tweet-text tweet-te...  ...   \n3  <p class=\"TweetTextSize js-tweet-text tweet-te...  ...   \n4  <p class=\"TweetTextSize js-tweet-text tweet-te...  ...   \n\n                                            img_urls video_url  likes  \\\n0                                                 []       NaN      0   \n1                                                 []       NaN      2   \n2                                                 []       NaN      1   \n3  ['https://pbs.twimg.com/media/EcCizqOX0AMWDaT....       NaN      0   \n4                                                 []       NaN      0   \n\n  retweets  replies  is_replied  is_reply_to  parent_tweet_id  \\\n0        0        0       False        False              NaN   \n1        0        1        True        False              NaN   \n2        1        0       False         True     1.278799e+18   \n3        0        0       False        False              NaN   \n4        0        1        True        False              NaN   \n\n                                      reply_to_users  lang  \n0                                                 []    en  \n1                                                 []    en  \n2  [{'screen_name': 'TheoKeith', 'user_id': '1003...    en  \n3                                                 []    en  \n4                                                 []    en  \n\n[5 rows x 23 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>screen_name</th>\n      <th>username</th>\n      <th>user_id</th>\n      <th>tweet_id</th>\n      <th>tweet_url</th>\n      <th>timestamp</th>\n      <th>timestamp_epochs</th>\n      <th>text</th>\n      <th>text_html</th>\n      <th>...</th>\n      <th>img_urls</th>\n      <th>video_url</th>\n      <th>likes</th>\n      <th>retweets</th>\n      <th>replies</th>\n      <th>is_replied</th>\n      <th>is_reply_to</th>\n      <th>parent_tweet_id</th>\n      <th>reply_to_users</th>\n      <th>lang</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>shubhamsteve7</td>\n      <td>Shubham Yaduvanshi</td>\n      <td>1152844946577039362</td>\n      <td>1279203043465138176</td>\n      <td>/shubhamsteve7/status/1279203043465138176</td>\n      <td>2020-07-03 23:59:06</td>\n      <td>1593820746</td>\n      <td>INFORM report (European Commission) has ranked...</td>\n      <td>&lt;p class=\"TweetTextSize js-tweet-text tweet-te...</td>\n      <td>...</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>[]</td>\n      <td>en</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>texaslnghorn</td>\n      <td>johnny quest</td>\n      <td>1725786169</td>\n      <td>1279202307360645121</td>\n      <td>/texaslnghorn/status/1279202307360645121</td>\n      <td>2020-07-03 23:56:11</td>\n      <td>1593820571</td>\n      <td>Fuck Minnesota. You made your bed, sleep in it...</td>\n      <td>&lt;p class=\"TweetTextSize js-tweet-text tweet-te...</td>\n      <td>...</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>True</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>[]</td>\n      <td>en</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>CarolsCloset</td>\n      <td>carolyn tackett</td>\n      <td>22285976</td>\n      <td>1279201745793622017</td>\n      <td>/CarolsCloset/status/1279201745793622017</td>\n      <td>2020-07-03 23:53:57</td>\n      <td>1593820437</td>\n      <td>Not happening. This isn't a natural disaster. ...</td>\n      <td>&lt;p class=\"TweetTextSize js-tweet-text tweet-te...</td>\n      <td>...</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>False</td>\n      <td>True</td>\n      <td>1.278799e+18</td>\n      <td>[{'screen_name': 'TheoKeith', 'user_id': '1003...</td>\n      <td>en</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>MICLAW1</td>\n      <td>Maddox, Isaacson &amp; Cisneros, LLP</td>\n      <td>863842520</td>\n      <td>1279201306234761217</td>\n      <td>/MICLAW1/status/1279201306234761217</td>\n      <td>2020-07-03 23:52:12</td>\n      <td>1593820332</td>\n      <td>Having a strong continuity plan in place means...</td>\n      <td>&lt;p class=\"TweetTextSize js-tweet-text tweet-te...</td>\n      <td>...</td>\n      <td>['https://pbs.twimg.com/media/EcCizqOX0AMWDaT....</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>False</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>[]</td>\n      <td>en</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>RuizBelvis</td>\n      <td>Miguel Ruiz Belvis</td>\n      <td>253829400</td>\n      <td>1279200736706990080</td>\n      <td>/RuizBelvis/status/1279200736706990080</td>\n      <td>2020-07-03 23:49:56</td>\n      <td>1593820196</td>\n      <td>@DavidBegnaud @AEEONLINE @NoticentroWAPA @Tele...</td>\n      <td>&lt;p class=\"TweetTextSize js-tweet-text tweet-te...</td>\n      <td>...</td>\n      <td>[]</td>\n      <td>NaN</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>True</td>\n      <td>False</td>\n      <td>NaN</td>\n      <td>[]</td>\n      <td>en</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 23 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 74
+     "execution_count": 102
     }
    ],
    "source": [
@@ -60,25 +60,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns=['Unnamed: 0', 'screen_name', 'username', 'user_id', 'tweet_id', 'tweet_url', 'timestamp' ,'timestamp_epochs', 'text_html', 'links', 'hashtags', 'has_media', 'img_urls', 'video_url', 'likes','retweets', 'replies', 'is_replied', 'is_reply_to', 'parent_tweet_id', 'reply_to_users'])\n"
+    "df = df.drop(columns=['Unnamed: 0', 'screen_name', 'username', 'user_id', 'tweet_id', 'tweet_url', 'timestamp' ,'timestamp_epochs', 'text_html', 'links', 'hashtags', 'has_media', 'img_urls', 'video_url', 'likes','retweets', 'replies', 'is_replied', 'is_reply_to', 'parent_tweet_id', 'reply_to_users', 'lang'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(13937, 2)"
+      "text/plain": "(8773, 1)"
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 104
     }
    ],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(12523, 2)"
+      "text/plain": "(7699, 1)"
      },
      "metadata": {},
-     "execution_count": 78
+     "execution_count": 106
     }
    ],
    "source": [
@@ -114,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('Dataset/accident_14.csv', index=False)"
+    "df.to_csv('Dataset/natural_ds.csv', index=False)"
    ]
   }
  ]
