--- a/marge csv.ipynb
+++ b/marge csv.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,26 +32,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('Dataset/accident_13.csv')\n",
-    "df2 = pd.read_csv('Dataset/accident_14.csv')"
+    "df1 = pd.read_csv('Dataset/accident_1_ds.csv')\n",
+    "df2 = pd.read_csv('Dataset/accident_2_ds.csv')\n",
+    "df3 = pd.read_csv('Dataset/beirut_ds.csv')\n",
+    "df4 = pd.read_csv('Dataset/bushfires_ds.csv')\n",
+    "df5 = pd.read_csv('Dataset/disaster_1_ds.csv')\n",
+    "df6 = pd.read_csv('Dataset/disaster_2_ds.csv')\n",
+    "df7 = pd.read_csv('Dataset/earthquake_ds.csv')\n",
+    "df8 = pd.read_csv('Dataset/natural_ds.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames = [df1, df2]"
+    "frames = [df1, df2, df3, df4, df5, df6, df7, df8]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,26 +66,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "marge.to_csv('Dataset/accident_marge.csv', index=False)"
+    "marge.to_csv('Dataset/tweet_marge.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "       Unnamed: 0.1                                               text\n0                38  As much as it’s insanity that that dude from N...\n1                39  MODIF [26 juil. 2020 à 19 h 57] Fermeture de 3...\n2                40  Motor Vehicle Accident | Autumn Meadow Trl / S...\n3                41  Motor Vehicle Accident | N Hampton Rd / Remond...\n4                42  New album is okay. Chris still sounds amazing ...\n...             ...                                                ...\n12518         13932  Construction site accidents can be caused by a...\n12519         13933  I caused an accident in January and I was give...\n12520         13934  THANK YOU. Just got off the phone with county ...\n12521         13935  A lot of y’all never been in a car accident so...\n12522         13936              No such accidents in the Middle East.\n\n[25046 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0.1</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>38</td>\n      <td>As much as it’s insanity that that dude from N...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>39</td>\n      <td>MODIF [26 juil. 2020 à 19 h 57] Fermeture de 3...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>40</td>\n      <td>Motor Vehicle Accident | Autumn Meadow Trl / S...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>41</td>\n      <td>Motor Vehicle Accident | N Hampton Rd / Remond...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>42</td>\n      <td>New album is okay. Chris still sounds amazing ...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>12518</th>\n      <td>13932</td>\n      <td>Construction site accidents can be caused by a...</td>\n    </tr>\n    <tr>\n      <th>12519</th>\n      <td>13933</td>\n      <td>I caused an accident in January and I was give...</td>\n    </tr>\n    <tr>\n      <th>12520</th>\n      <td>13934</td>\n      <td>THANK YOU. Just got off the phone with county ...</td>\n    </tr>\n    <tr>\n      <th>12521</th>\n      <td>13935</td>\n      <td>A lot of y’all never been in a car accident so...</td>\n    </tr>\n    <tr>\n      <th>12522</th>\n      <td>13936</td>\n      <td>No such accidents in the Middle East.</td>\n    </tr>\n  </tbody>\n</table>\n<p>25046 rows × 2 columns</p>\n</div>"
+      "text/plain": "                                                   text\n0     As much as it’s insanity that that dude from N...\n1     New album is okay. Chris still sounds amazing ...\n2     Anytime they help you remember that. Ever been...\n3                    Tryna make a billion on accident!!\n4     Yes, My First Car Lasted 3 Years When It Wasn’...\n...                                                 ...\n7694  @AmazonUK @Hermesparcels sat in the garden wai...\n7695  In every disaster/apocalyptic movie there’s an...\n7696  Entire financial industry exposed as basically...\n7697  “The coronavirus is a natural disaster. The Re...\n7698  \"This suffering, your suffering, wasn’t inevit...\n\n[30688 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>As much as it’s insanity that that dude from N...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>New album is okay. Chris still sounds amazing ...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Anytime they help you remember that. Ever been...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Tryna make a billion on accident!!</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Yes, My First Car Lasted 3 Years When It Wasn’...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7694</th>\n      <td>@AmazonUK @Hermesparcels sat in the garden wai...</td>\n    </tr>\n    <tr>\n      <th>7695</th>\n      <td>In every disaster/apocalyptic movie there’s an...</td>\n    </tr>\n    <tr>\n      <th>7696</th>\n      <td>Entire financial industry exposed as basically...</td>\n    </tr>\n    <tr>\n      <th>7697</th>\n      <td>“The coronavirus is a natural disaster. The Re...</td>\n    </tr>\n    <tr>\n      <th>7698</th>\n      <td>\"This suffering, your suffering, wasn’t inevit...</td>\n    </tr>\n  </tbody>\n</table>\n<p>30688 rows × 1 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 6
     }
    ],
    "source": [
