--- a/remove nonenglish.ipynb
+++ b/remove nonenglish.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,26 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read CSV File\n",
-    "df = pd.read_csv('Data/typhoon.csv')"
+    "df = pd.read_csv('Data/natural.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(374, 22)"
+      "text/plain": "(9634, 22)"
      },
      "metadata": {},
-     "execution_count": 186
+     "execution_count": 83
     }
    ],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(349, 22)"
+      "text/plain": "(9541, 22)"
      },
      "metadata": {},
-     "execution_count": 188
+     "execution_count": 85
     }
    ],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(349, 23)"
+      "text/plain": "(9541, 23)"
      },
      "metadata": {},
-     "execution_count": 190
+     "execution_count": 87
     }
    ],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,16 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "(187, 23)"
+      "text/plain": "(8773, 23)"
      },
      "metadata": {},
-     "execution_count": 192
+     "execution_count": 89
     }
    ],
    "source": [
@@ -147,12 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save Dataframe to CSV File\n",
-    "df.to_csv('Data/typhoon_test.csv',index=False)"
+    "df.to_csv('Dataset/natural_ds.csv',index=False)"
    ]
   },
   {
